--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,4 +1,9 @@
 trigger:
+- task: JavaToolInstaller@0
+  inputs:
+    versionSpec: '8'
+    jdkArchitectureOption: 'x64'
+    jdkSourceOption: 'PreInstalled'
 - main
 
 pool:
