--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -5,10 +5,14 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: UseJavaVersion@0
+- task: JavaToolInstaller@0
   inputs:
     versionSpec: '11'
-    addToPath: true
+    jdkArchitectureOption: 'x64'
+    jdkSourceOption: 'Installer'
+    jdkInstallerMethod: 'Task'
+    tasks: 'useJavaVersion'
+    cleanDestinationDirectory: true
 
 - script: 'mvn clean test'
   displayName: 'Run TestNG Tests'
